# pi-fan-controller

./: .gitignore  .pre-commit-config.yaml  README.md  fancontrol.py  fancy_logging.py  flake.nix  pyproject.toml
.github/workflows/: publish.yml
src/pi_fan_controller/: __init__.py  __init__.py~  fancontrol.py
