[project]
name = "pi-fan-controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gpiozero>=2.0.1",
    "rich>=13.9.2",
    "rpi-gpio>=0.7.1",
    "typer>=0.12.5",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
]
