[project]
name = "pi-fan-controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jakob Guldberg Aaes", email = "jakob1379@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "gpiozero>=2.0.1",
    "rich>=13.9.4",
    "rpi-gpio>=0.7.1",
    "sane-rich-logging>=1.0.1",
    "typer>=0.12.5",
]

[project.scripts]
pi-fan-controller = "pi_fan_controller:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.6.9",
]
